app/style.css
/*
* Stylesheet
* Author: Mirko van der Waal (God);
*/


@import url(http://fonts.googleapis.com/css?family=Lato:400,100,300);
@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);

/* Reset standard margins and apply standard fallback font + Background placement.*/
html,
body                {margin:0;padding:0;font-family: 'Montserrat', sans-serif;
                    vertical-align:baseline;line-height:1;color:#191919;overflow-x:hidden;
                    background:#FFF}

/* Prevent padding to resize the element.*/
*,
*:before,
*:after             {-webkit-box-sizing: border-box;
                        -moz-box-sizing: border-box;
                             box-sizing: border-box;
                    outline:none;}

/* Have a pointer on all buttons and a clearfix bound to a div. */
.clear-both         {clear:both;}
.ion-refresh        {cursor:pointer;}

/* Small resest for chrome and user preferences. */
a                   {color:inherit;text-decoration:inherit;}

input               {outline:none;}
input[disabled]     {background:#F2F2F2 !important;color:#000 !important}

/* Default 'nav' */
nav                 {width:100px;height:100%;position:fixed;left:0;background:#214E96;
                    transition:width .3s;-webkit-transition:width .3s;color:#FFF;z-index:1000;}

/* The 'nav' upon active/hover */
nav:hover           {width:150px;}

/* Place-- alignment of the child elements of the 'nav'. */
nav a               {display: -webkit-box;
                     display: -webkit-flex;
                     display: flex;
                    height:20vh;-webkit-align-items: center;align-items: center;
                    justify-content: center;-webkit-justify-content: center;font-size:2em;
                    transition:background .3s, color .3s;}

/* The child element of the 'nav' upon active/hover. */
nav a:hover,
nav a:active,
nav a.active        {background:#FFF;color:#214E96;}

/* Hide others and re-asign default page upon active */
.page {display:block;max-height:0px;opacity:0;min-height:0%;transition: 0.5s;overflow:scroll;overflow-x:hidden;}
.page.show {display:block;max-height:100%;opacity:1;min-height:100%;}

@-moz-document url-prefix() {
    .page {transition: opacity .5s; overflow:auto;overflow-x:hidden;}
}


/* Invisible layer to have a minimal width for the 'nav'. */
.navlay             {width:150px;height:100%;float:left;z-index:-100;}

/* Main container to have all the content. */
main                {height:100%;width:calc(100% - 150px);float:left;}

/* The CSS regarding the cookie. */

.cookie             {position:fixed;z-index:995;width:100%;text-align:center;background:rgba(0, 0, 0, .2);line-height:0.4em;
                    font-family: 'Montserrat', sans-serif;font-weight:300;right:0;transition:all .3s;display:block;
                    overflow:hidden;}
.cookie.hidden      {-webkit-transform: translateY(-100%);-moz-transform: translateY(-100%);transform: translateY(-100%);}
.cookie p           {float:left;width:80%;margin-left:10%;}
.cookie i           {float:left;width:10%;padding:7.5 0 0 0;font-size:150%;cursor:pointer;}


                    /*
                    ICON_COLOR: #F2F2F2;
                    BASECOLOR:  #214E96;
                 OLD_BASECOLOR: #821031;
                    TEXT_COLOR: #191919;
                    */

.landing {width:100%;background:#214E96;height:100%;text-align:center;}
.landing img {margin-top:100px;width:85%;}
.landing div {font-family: 'Montserrat', sans-serif;text-align:center;margin-top:65px;}
.landing div a {letter-spacing:.5em;color:#FFF;border:2.5px solid #FFF;padding:20 50;transition:background .3s, color .3s;}
.landing div a:hover {color:#214E96;background:#FFF;}
.landing .devs {text-align:center;width:400px;position:fixed;left:50%;margin-left:-200px;bottom:10;color:white;font-size:70%;}
.shadowTimer {display:none;}
.checkboxes {transition: all .3s;width:100%;font-family: 'Montserrat', sans-serif;}
.offscreen {-webkit-transform: translateX(100%);-moz-transform: translateX(100%);transform: translateX(100%);}

/* All window headers */
header                  {width:300px;margin:20 auto 50 auto}
header h1               {font-family: 'Montserrat', sans-serif;text-align:center;
                        font-size:400%;font-weight:100;border-bottom:5px solid #214E96;}

/* >Home */
.home                   {margin:auto;width:100%;padding:0px 25px;}
    .home-group         {margin:75px auto 50px auto;max-width:720px;}
    .home-group h2      {font-size:200%;color:#214E96;min-width:280px;padding:0px 25px;}
    .home-group i       {font-size:100%;width:10%;float:left;}
    .home-group a       {width:90%;float:left;}
    .home-group p       {padding-left:10px;border-left:10px solid #214E96;
                        font-size:100%;line-height:1.25em;padding-top:50px;}
    .home-group span    {line-height:2em;color:#214E96;text-decoration:underline;}
    .issue              {text-align:center;}
    .issue a            {text-decoration:underline;}

/* <Home */

/* >Time */
.checkbox-overlay       {display:none;height:100%;width:100%;background:rgba(255, 255, 255, .8);position:fixed;left:0;top:0;}
.checkbox-overlay.active{display:block;}
.checkbox-texts         {text-align:center;padding:25vh 0 0 0;font-size:150%;text-shadow:0px 2px 0px white;}
.checkbox-bool          {width:190px;margin:0 auto;}
.checkbox-confirm,
.checkbox-cancel        {text-align:center;background:#FFF;padding:20 0;width:75px;color:#214E96;float:left;margin:0 10;
                        border:3px solid #214E96;font-size:125%;font-family: 'Montserrat', sans-serif;
                        transition:background .3s, color .3s;cursor:pointer;}
.checkbox-confirm:hover,
.checkbox-cancel:hover  {background:#214E96;color:white;}
.checkbox-confirm:active,
.checkbox-cancel:active,{background:#214E96;color:white;}

.checkbox-plus          {margin:40px 0px 40px 10px;font-size:200%;text-align:center;}
/* ... */

